--- a/yani150506/css/style.css
+++ b/yani150506/css/style.css
@@ -1,8 +1,15 @@
 body
 {
-	color:deeppink;
+	background-color:bisque;
 }
-#footer
+# header
 {
-	font-size: 10px;
+font-family: fantasy;
+	font-color:black;
+}
+# div id header
+{
+	background-color: cornsilk;
+	font-family: sans-serif;
+	font-color:green;
 }
