--- a/Yayuk Wahyuni/HTML/Lesson5/css/style.css
+++ b/Yayuk Wahyuni/HTML/Lesson5/css/style.css
@@ -1,15 +1,14 @@
 body
 {
-    color:green;
+    color:blue;
 }
 
 table
 {
-    color:black;
+    color:black; padding: 10px 20px 30px 25px; text-align: center; font-family: comic sans ms; font-size: 18px; width: 1024px; border: 4px outset #3d85c6; border-radius: 15px;- mox-box-shadow: 0px 0px 5px 4px #6fa8dc; box-shadow: 0px 0px 5px 4px #6fa8dc" height="125" widht="1024" bgcolor="blue" border="1" align="center">
 }
 #footer
 {
     font-size:10px
 }
 
-.class
