--- a/Jamilah/css/style.css
+++ b/Jamilah/css/style.css
@@ -77,7 +77,7 @@ body {
 .a-header-nav{
     display: block;
     padding: 10px;
-    background-color:greenyellow;
+    background-color:dodgerblue;
     color: darkred;
     text-decoration: none;
 }
@@ -121,7 +121,7 @@ body {
     display: block;
     padding: 10px;
     background-color:grey;
-    color: yellow;
+    color: dodgerblue;
     text-decoration: none;
 }
 
