--- a/Titin/css/style.css
+++ b/Titin/css/style.css
@@ -1,7 +1,22 @@
 #nav
 {
- background-color:aquamarine;   
+ background-color:cyan;   
 }
+#ul-sidebar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+	text-decoration: none;
+}
+
+.li-sidebar{
+    display: inline;
+    float: none;
+    font-family: fantasy;
+    font-size: 18pt;
+}
+
+
 
 #div-header{
     width: 100%
