--- a/Rondiyah/css/contactus.css
+++ b/Rondiyah/css/contactus.css
@@ -1,4 +1,4 @@
---html, body {
+html, body {
 	margin: 0;
 	padding: 0;
 }
@@ -58,12 +58,12 @@ li a
 {
     color: rgb(35,125,176);
 }
-figure{
-    width:200px;
-    height:250px;
-    margin-right: 55px;
-    float:left
+div#map{
+   margin: 0 auto;
+    width: 450px;
+    height: 300px;
 }
+
 	
 a:link {
 	text-decoration: none;
@@ -80,6 +80,7 @@ nav{
 	background: white;
 	clear: right;
 }
+
 footer {
 	background: rgb(100, 98, 102);
 	line-height: 3em;
@@ -92,12 +93,17 @@ footer {
     font-size: 15px;
    text-align: center;
 }
-figcaption
-{
-    text-align: left;
-}
+
 article
 {
     margin: 2.2em;
+    
+}
+p{
+  
+   width: 250px;
+    position:relative;
+    top:-75px;
+    left:95px;
 }
 
