--- a/Rondiyah/css/topup.css
+++ b/Rondiyah/css/topup.css
@@ -1,4 +1,4 @@
---html, body {
+-html, body {
 	margin: 0;
 	padding: 0;
 }
@@ -75,11 +75,64 @@ a:hover {
 	
 nav{
 			
-	height: 35px;
+	height: 300x;
 	margin: 10px auto;
 	background: white;
 	clear: right;
 }
+table
+{
+    width:400px;
+    height:250px;
+    border-collapse: collapse;
+    border-right: 1px solid rgba(0, 0, 0, .6);
+    margin-right: 40px;
+    margin-bottom: 25px;
+    
+}
+table
+{
+    float: left;
+    
+}
+table td
+{
+    color: teal;
+}
+tr
+{
+    
+}
+tr th
+{
+    padding: 4px;
+    color: rgba(0,0,0,.6);
+    text-align: left;
+   
+    
+  
+    
+    
+    
+   
+}
+td
+{
+    width: 250px;
+    text-align: left;
+    border-right: 1px rgba(0, 0, 0, .6);
+    line-height: 2em;
+    
+    
+}
+caption
+{
+    margin: 25px 0;
+    color: rgba(0,0,0,.6);
+    font-size: 2.5em;
+    
+}
+    
 footer {
 	background: rgb(100, 98, 102);
 	line-height: 3em;
