--- a/Rondiyah/css/usedphone.css
+++ b/Rondiyah/css/usedphone.css
@@ -51,6 +51,13 @@ input[placeholder]
 	list-style: none;
 	margin:0px 20px;
 }
+.main{
+    cursor: default;
+}
+li a
+{
+    color: rgb(35,125,176);
+}
 figure{
     width:200px;
     height:250px;
