--- a/Titin/css/style.css
+++ b/Titin/css/style.css
@@ -1,7 +1,95 @@
 #nav
 {
- background-color:cadetblue;   
+ background-color:lightblue;   
 }
+#td-header {
+    width: 65%;
+    background-color: aquamarine;
+}
+#table-header-nav {
+    width: 100%;
+}
+#td-header-title{
+    width: 100%;
+    height: 75px;
+    vertical-align: top;
+    text-align: center;
+    font-size: 40pt;
+    font-family: fantasy;
+    color: white;
+}
+
+#td-header-nav {
+ width: 100%;
+    height: 75px;
+    vertical-align: bottom;
+    text-align: center;
+    font-size: 12pt;
+    font-family: fantasy;
+    color: white;
+}
+#div-header-desc{
+    text-align: center;
+    font-size: 15pt;
+    font-family: fantasy;
+    color: white;
+}
+
+#ul-header-nav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    background-color: aquamarine;
+}
+
+.li-header-nav {
+ display: inline;
+  float: left;
+}
+.a-header-nav {
+    display: block;
+    padding: 10px;background-color: white;
+    color:aquamarine;
+    text-decoration: none
+}
+
+
+#td-body-sedebar{
+    width: 15%;
+    height: auto;
+    border-style: none;
+    vertical-align: top;
+    text-align: center;
+}
+
+#ul-sidebar{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+}
+#.li-sidebar{
+    display: inline;
+    float: none;
+    font-family: fantasy;
+    font-size: 18pt;
+}
+
+.a-sidebar{
+  display: block;
+    padding: 10px;
+    background-color:cornflowerblue;
+    color: white;
+    text-decoration: none;
+}
+.li-sidebar .a-sidebar:hover{
+    background-color: bisque;
+    color: blue;
+}
+
+
+
+
 #ul-sidebar {
     list-style-type: none;
     margin: 0;
