presentasi meela tailor
presentasi meela tailor

--- a/Jamilah/css/style.css
+++ b/Jamilah/css/style.css
@@ -177,7 +177,7 @@ body {
 #td-footer{
     background-color:grey;
     font-size:10pt;
-    color: white;
+    color:green;
     font-family: fantasy;
     text-align: right;
     padding: 5pt;
