--- a/Susilowati/css/style.css
+++ b/Susilowati/css/style.css
@@ -115,7 +115,7 @@ body {
     list-style-type: none;
     margin: 0;
     padding: 0;
-	text-decoration: none
+	text-decoration: none;
 }
 
 .li-sidebar{
